[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "philiprehberger-net-scanner"
version = "0.1.5"
description = "LAN device discovery and TCP port scanning"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Philip Rehberger" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/philiprehberger/py-net-scanner#readme"
Repository = "https://github.com/philiprehberger/py-net-scanner"
Issues = "https://github.com/philiprehberger/py-net-scanner/issues"
Changelog = "https://github.com/philiprehberger/py-net-scanner/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/philiprehberger_net_scanner"]
